--- a/partials/wizard.html
+++ b/partials/wizard.html
@@ -4,9 +4,12 @@
 </div>
 <div class="modal-body">
 	<div>
-		<button class="btn" ng-class="{'btn-primary':isCurrentStep(0)}" ng-click="setCurrentStep(0)">Step One</button>
-		<button class="btn" ng-class="{'btn-primary':isCurrentStep(1)}" ng-click="setCurrentStep(1)">Step Two</button>
-		<button class="btn" ng-class="{'btn-primary':isCurrentStep(2)}" ng-click="setCurrentStep(2)">Step Three</button>
+		<div class="btn-group">
+			<button class="btn" ng-class="{'btn-primary':isCurrentStep(0)}" ng-click="setCurrentStep(0)">Step One</button>
+			<button class="btn" ng-class="{'btn-primary':isCurrentStep(1)}" ng-click="setCurrentStep(1)">Step Two</button>
+			<button class="btn" ng-class="{'btn-primary':isCurrentStep(2)}" ng-click="setCurrentStep(2)">Step Three</button>
+		</div>	
+		<hr>	
 		<div ng-switch="getCurrentStep()" ng-animate="'wave'" class="slide-frame">
 			<div ng-switch-when="one">
 				<fieldset>  
