--- a/partials/wizard.html
+++ b/partials/wizard.html
@@ -1,13 +1,13 @@
 <div class="modal-header">
 	<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-	<h3>AngularJS Taco Party</h3>
+	<h3>Taco Party!!!!!</h3>
 </div>
 <div class="modal-body">
 	<div>
 		<div class="btn-group">
-			<button class="btn" ng-class="{'btn-primary':isCurrentStep(0)}" ng-click="setCurrentStep(0)">Step One</button>
-			<button class="btn" ng-class="{'btn-primary':isCurrentStep(1)}" ng-click="setCurrentStep(1)">Step Two</button>
-			<button class="btn" ng-class="{'btn-primary':isCurrentStep(2)}" ng-click="setCurrentStep(2)">Step Three</button>
+			<button class="btn" ng-class="{'btn-primary':isCurrentStep(0)}" ng-click="setCurrentStep(0)">Uno</button>
+			<button class="btn" ng-class="{'btn-primary':isCurrentStep(1)}" ng-click="setCurrentStep(1)">Dos</button>
+			<button class="btn" ng-class="{'btn-primary':isCurrentStep(2)}" ng-click="setCurrentStep(2)">Tres</button>
 		</div>	
 		<hr>	
 		<div ng-switch="getCurrentStep()" ng-animate="'wave'" class="slide-frame">
