--- a/partials/wizard.html
+++ b/partials/wizard.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-  <button type="button" class="close" ng-click="$hide()" aria-hidden="true">&times;</button>
+  <button type="button" class="close" ng-click="$close(result)" aria-hidden="true">&times;</button>
   <h3>Taco Party!!!!!</h3>
 </div>
 <div class="modal-body">
