--- a/app.css
+++ b/app.css
@@ -7,24 +7,58 @@ body {
 .modal {
   background-color: rgba(0,0,0,0.8);
 }
-/* modal backdrop animations */
-/*.modal-backdrop.am-fade {
-  height: 100%;
-  opacity: .8;
-  transition: opacity .15s linear;
+
+.alert {
+  margin-top: 10px;
+  white-space: nowrap;
 }
-.modal-backdrop.am-fade.ng-enter {
+.alert.ng-animate {
+  -webkit-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
+  -moz-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
+  -o-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
+  transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
+}
+.alert.ng-enter {
   opacity: 0;
+  max-width: 0;
+  max-height: 0;
+  padding: 0;
+  border-width: 0;
+  margin: 0;
 }
-.modal-backdrop.am-fade.ng-enter-active {
-  opacity: .8;
+
+.alert.ng-enter-active {
+  opacity: 1;
+  max-width: 100%;
+  max-height: 100px;
+  padding: 15px 35px 15px 15px;
+  border-width: 1px;
+  margin: 10px 0 20px;
 }
-.modal-backdrop.am-fade.ng-leave {
-  opacity: .8;
+
+.alert.ng-leave {
+  opacity: 1;
+  max-width: 100%;
+  max-height: 100px;
+  padding: 15px 35px 15px 15px;
+  border-width: 1px;
+  margin: 10px 0 20px;
 }
-.modal-backdrop.am-fade.ng-leave-active {
+
+.alert.ng-leave-active {
   opacity: 0;
-}*/
+  max-width: 0;
+  max-height: 0;
+  padding: 0;
+  border-width: 0;
+  margin:0;
+}
+.alert-container {
+  -webkit-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
+  -moz-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
+  -o-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
+  transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
+}
 
 .form-signin {
   max-width: 360px;
@@ -63,32 +97,11 @@ input[type=text], select {
 }
 
 /* modal and step animations */
-.slide.ng-animate, .wave.ng-animate {
+.modal-content.ng-animate, .wave.ng-animate {
   -webkit-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
   -moz-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
   -o-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
   transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
-}
-
-.slide.ng-enter {
-  position: absolute;
-  opacity: 0;
-  top:-200px;
-}
-
-.slide.ng-enter-active {
-  opacity: 1;
-  top:0;
-}
-
-.slide.ng-leave {
-  opacity: 1;
-  top:0;
-}
-
-.slide.ng-leave-active {
-  opacity: 0;
-  top:-200px;
 }
 
 .wave.ng-enter {
