--- a/partials/wizard.html
+++ b/partials/wizard.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-	<button type="button" class="close" ng-click="$dismiss('Wizard Closed')" aria-hidden="true">&times;</button>
+	<button type="button" class="close" ng-click="modal.dismiss('No bueno!')" aria-hidden="true">&times;</button>
 	<h3>Taco Party!!!!!</h3>
 </div>
 <div class="modal-body">
@@ -94,6 +94,6 @@
 </div>
 <div class="modal-footer">
 	<a class="btn btn-default" ng-click="modal.handlePrevious()" ng-show="!modal.isFirstStep()">Back</a>
-	<a class="btn btn-primary" ng-click="modal.handleNext(modal.wizard)">{{modal.getNextLabel()}}</a>
+	<a class="btn btn-primary" ng-click="modal.handleNext()">{{modal.getNextLabel()}}</a>
 </div>
 
