Next and back buttons are button tags instead of anchor tags

--- a/partials/wizard.html
+++ b/partials/wizard.html
@@ -93,7 +93,7 @@
 	</div>
 </div>
 <div class="modal-footer">
-	<a class="btn btn-default" ng-click="modal.handlePrevious()" ng-show="!modal.isFirstStep()">Back</a>
-	<a class="btn btn-primary" ng-click="modal.handleNext()">{{modal.getNextLabel()}}</a>
+	<button class="btn btn-default" ng-click="modal.handlePrevious()" ng-show="!modal.isFirstStep()">Back</button>
+	<button class="btn btn-primary" ng-click="modal.handleNext()">{{modal.getNextLabel()}}</button>
 </div>
 
